# Translations

./: README.md
Translations_Section2/: CMakeLists.txt  Main.qml
Translations_Section3/: CMakeLists.txt  Main.qml  main.cpp
Translations_Section3/ts/: qml_fi.ts  qml_fr.ts
Translations_Section4/: CMakeLists.txt  main.cpp  qml_en.qm  qml_fi.qm  qml_fr.qm
Translations_Section4/ts/: qml_en.ts
Translations_Section5a/: CMakeLists.txt  Main.qml
Translations_Section5a/i18n/: qml_en.ts  qml_fi.ts
Translations_Section5b/: CMakeLists.txt  Main.qml
Translations_Section5b/i18n/: qml_en.ts  qml_fr.ts
Translations_Section6/: CMakeLists.txt  Main.qml  main.cpp  myitem.cpp  myitem.h
Translations_Section6/i18n/: qml_en.ts  qml_fi.ts  qml_fr.ts
